--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN Propppd</title>
+    <title>PLN popiProd</title>
     <script src="https://www.youtube.com/iframe_api"></script>
     <style>
         * {
@@ -579,7 +579,7 @@
             padding-top: 80px;
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 2rem;
+            gap: 1rem; /* Rapprocher les colonnes */
             height: calc(100% - 100px);
         }
 
@@ -587,13 +587,21 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            max-width: 300px; /* Élargissement pour une ligne */
+            max-width: 300px;
         }
 
         .contact-column-1 p {
             font-size: 1.5rem;
             margin-bottom: 1rem;
-            white-space: nowrap; /* Pour garder sur une ligne */
+            white-space: nowrap;
+        }
+
+        .contact-column-1 p br {
+            display: none; /* Saut de ligne initialement désactivé */
+        }
+
+        .contact-column-1 p.br-after-exprimer br {
+            display: block; /* Activer le saut de ligne après "exprimer" */
         }
 
         .contact-column-1 a {
@@ -629,7 +637,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            max-width: 300px; /* Élargissement pour une ligne */
+            max-width: 300px;
         }
 
         .contact-column-2 p {
@@ -1107,7 +1115,7 @@
     <section class="contact-section" id="contact-section">
         <div class="contact-content">
             <div class="contact-column-1">
-                <p>Me contacter pour exprimer notre créativité ensemble</p>
+                <p class="br-after-exprimer">Me contacter pour exprimer<br>notre créativité ensemble</p>
                 <a href="mailto:pln.prod35@gmail.com">pln.prod35@gmail.com</a>
                 <div class="social-icons">
                     <a href="https://twitter.com" target="_blank">
@@ -1143,6 +1151,7 @@
         <div class="legal-links">
             <a href="#">Mentions légales</a>
             <a href="#">Politique de confidentialité</a>
+            <a href="#">Politique des cookies</a>
             <a href="#">Termes et Conditions</a>
         </div>
     </section>
@@ -1157,6 +1166,7 @@
         <div class="legal-links">
             <a href="#">Mentions légales</a>
             <a href="#">Politique de confidentialité</a>
+            <a href="#">Politique des cookies</a>
             <a href="#">Termes et Conditions</a>
         </div>
     </section>
@@ -1256,7 +1266,9 @@
         function showSection(sectionId) {
             const section = document.getElementById(sectionId + '-section');
             const allSections = document.querySelectorAll('.bio-section, .contact-section, .equip-section');
-            allSections.forEach(s => s.classList.remove('active'));
+            allSections.forEach(s => {
+                if (s !== section) s.classList.remove('active');
+            });
             section.classList.add('active');
         }
 
