--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN popiProd</title>
+    <title>PLNNNINI Prod</title>
     <script src="https://www.youtube.com/iframe_api"></script>
     <style>
         * {
@@ -151,6 +151,7 @@
             padding: 0.5rem;
             border-radius: 50%;
             z-index: 100;
+            display: block; /* Réactivation des flèches */
         }
 
         .arrow-right {
@@ -579,7 +580,7 @@
             padding-top: 80px;
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 1rem; /* Rapprocher les colonnes */
+            gap: 0.5rem; /* Rapprocher les colonnes */
             height: calc(100% - 100px);
         }
 
@@ -596,12 +597,12 @@
             white-space: nowrap;
         }
 
-        .contact-column-1 p br {
-            display: none; /* Saut de ligne initialement désactivé */
+        .contact-column-1 p.br-after-exprimer {
+            white-space: normal; /* Permettre le saut de ligne */
         }
 
         .contact-column-1 p.br-after-exprimer br {
-            display: block; /* Activer le saut de ligne après "exprimer" */
+            display: block; /* Saut de ligne après "exprimer" */
         }
 
         .contact-column-1 a {
@@ -930,7 +931,7 @@
                 width: 90%;
                 margin-left: 10%;
                 grid-template-columns: 1fr;
-                gap: 1rem;
+                gap: 0.5rem;
             }
 
             .contact-column-1, .contact-column-2 {
@@ -1267,14 +1268,26 @@
             const section = document.getElementById(sectionId + '-section');
             const allSections = document.querySelectorAll('.bio-section, .contact-section, .equip-section');
             allSections.forEach(s => {
-                if (s !== section) s.classList.remove('active');
+                if (s !== section) {
+                    s.classList.remove('active');
+                    s.style.transform = 'translateY(100%)';
+                    s.style.opacity = '0';
+                }
             });
             section.classList.add('active');
+            setTimeout(() => {
+                section.style.transform = 'translateY(0)';
+                section.style.opacity = '1';
+            }, 10);
         }
 
         function hideSection(sectionId) {
             const section = document.getElementById(sectionId + '-section');
-            section.classList.remove('active');
+            section.style.transform = 'translateY(100%)';
+            section.style.opacity = '0';
+            setTimeout(() => {
+                section.classList.remove('active');
+            }, 500);
         }
 
         function closeModal() {
@@ -1303,7 +1316,11 @@
             mosaic.style.transform = `translateX(-${col * 100}vw)`;
             window.scrollTo({ top: row * window.innerHeight, behavior: 'smooth' });
             const allSections = document.querySelectorAll('.bio-section, .contact-section, .equip-section');
-            allSections.forEach(s => s.classList.remove('active'));
+            allSections.forEach(s => {
+                s.classList.remove('active');
+                s.style.transform = 'translateY(100%)';
+                s.style.opacity = '0';
+            });
         }
 
         window.addEventListener('scroll', () => {
