--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN Prodzizi</title>
+    <title>PLNpopopoProd</title>
     <script src="https://www.youtube.com/iframe_api"></script>
     <style>
         * {
@@ -83,7 +83,7 @@
             min-height: 400vh;
             overflow-x: hidden;
             transition: opacity 0.5s ease;
-            display: block; /* Assure que la mosaïque reste visible par défaut */
+            display: block;
         }
 
         .mosaic-container {
@@ -152,7 +152,7 @@
             padding: 0.5rem;
             border-radius: 50%;
             z-index: 100;
-            display: block; /* Assure que les flèches restent visibles */
+            display: block;
         }
 
         .arrow-right {
@@ -1090,7 +1090,7 @@
                 <a href="#" class="share-text" onclick="toggleSharePanel()">partager</a>
             </div>
         </div>
-        <div class="close-btn" onclick="closeVideoAndReturn()">✖</div>
+        <div class="close-btn" onclick="closeVideoAndReturnToMosaic()">✖</div>
         <div class="video-content" id="video-content">
             <!-- Lecteur et description -->
         </div>
@@ -1233,25 +1233,25 @@
 
             videoSection.classList.add('active');
             relatedVideos.querySelector(`[onclick="playRelatedVideo('dQw4w9WgXcQ')"]`).classList.add('active', 'playing');
-            // Masquer la mosaïque temporairement sans désactiver les flèches
+            // Masquer la mosaïque temporairement
             document.getElementById('hero').style.opacity = '0';
             document.getElementById('hero').style.pointerEvents = 'none';
         }
 
-        function closeVideoAndReturn() {
+        function closeVideoAndReturnToMosaic() {
             const videoSection = document.getElementById('video-section');
             videoSection.classList.remove('active');
             const videoContent = document.getElementById('video-content');
             videoContent.innerHTML = '';
             const relatedVideos = document.getElementById('related-videos');
             relatedVideos.innerHTML = '';
-            const mosaic = document.getElementById('mosaic');
-            mosaic.style.transform = 'translateX(0vw)';
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-            // Restaurer la mosaïque et les flèches
+            // Restaurer la mosaïque et ses flèches
             const hero = document.getElementById('hero');
             hero.style.opacity = '1';
             hero.style.pointerEvents = 'auto';
+            const mosaic = document.getElementById('mosaic');
+            mosaic.style.transform = 'translateX(0vw)';
+            window.scrollTo({ top: 0, behavior: 'smooth' });
             const arrows = document.querySelectorAll('.arrow');
             arrows.forEach(arrow => {
                 arrow.style.display = 'block';
@@ -1295,13 +1295,15 @@
                     const targetSection = e.target.getAttribute('onclick').replace('showSection(\'', '').replace('\')', '');
                     if (targetSection !== sectionId) {
                         hideSection(sectionId);
-                        showSection(targetSection);
-                    } else if (targetSection === 'narration' || targetSection === 'publicite' || targetSection === 'musique-video') {
-                        scrollToProject(parseInt(e.target.getAttribute('onclick').match(/\d+/)[0]));
+                        if (targetSection === 'narration' || targetSection === 'publicite' || targetSection === 'musique-video') {
+                            scrollToProject(parseInt(e.target.getAttribute('onclick').match(/\d+/)[0]));
+                        } else {
+                            showSection(targetSection);
+                        }
                     }
                 };
             });
-            // Masquer la mosaïque sans désactiver les flèches
+            // Masquer la mosaïque
             document.getElementById('hero').style.opacity = '0';
             document.getElementById('hero').style.pointerEvents = 'none';
         }
@@ -1313,12 +1315,13 @@
             setTimeout(() => {
                 section.classList.remove('active');
             }, 500);
-            const mosaic = document.getElementById('mosaic');
-            mosaic.style.transform = 'translateX(0vw)';
-            window.scrollTo({ top: 0, behavior: 'smooth' });
+            // Restaurer la mosaïque
             const hero = document.getElementById('hero');
             hero.style.opacity = '1';
             hero.style.pointerEvents = 'auto';
+            const mosaic = document.getElementById('mosaic');
+            mosaic.style.transform = 'translateX(0vw)';
+            window.scrollTo({ top: 0, behavior: 'smooth' });
             const arrows = document.querySelectorAll('.arrow');
             arrows.forEach(arrow => {
                 arrow.style.display = 'block';
@@ -1351,7 +1354,7 @@
             const col = (projectNumber - 1) % 3;
             mosaic.style.transform = `translateX(-${col * 100}vw)`;
             window.scrollTo({ top: row * window.innerHeight, behavior: 'smooth' });
-            const allSections = document.querySelectorAll('.bio-section, .contact-section, .equip-section');
+            const allSections = document.querySelectorAll('.bio-section, .contact-section, .equip-section, .video-section');
             allSections.forEach(s => {
                 s.classList.remove('active');
                 s.style.transform = 'translateY(100%)';
