--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLNnnnn Prod</title>
+    <title>PLNqqqqqq Prod</title>
     <script src="https://www.youtube.com/iframe_api"></script>
     <style>
         * {
@@ -1257,9 +1257,8 @@
             arrows.forEach(arrow => {
                 arrow.style.display = 'block';
                 arrow.style.pointerEvents = 'auto';
+                arrow.onclick = arrow.getAttribute('onclick'); // Réassigner les gestionnaires d'événements
             });
-            // Forcer la réactivation des événements
-            arrows.forEach(arrow => arrow.dispatchEvent(new Event('click', { bubbles: true })));
         }
 
         function playRelatedVideo(videoId) {
@@ -1330,9 +1329,8 @@
             arrows.forEach(arrow => {
                 arrow.style.display = 'block';
                 arrow.style.pointerEvents = 'auto';
+                arrow.onclick = arrow.getAttribute('onclick'); // Réassigner les gestionnaires d'événements
             });
-            // Forcer la réactivation des événements
-            arrows.forEach(arrow => arrow.dispatchEvent(new Event('click', { bubbles: true })));
         }
 
         function closeModal() {
@@ -1373,9 +1371,8 @@
             arrows.forEach(arrow => {
                 arrow.style.display = 'block';
                 arrow.style.pointerEvents = 'auto';
+                arrow.onclick = arrow.getAttribute('onclick'); // Réassigner les gestionnaires d'événements
             });
-            // Forcer la réactivation des événements
-            arrows.forEach(arrow => arrow.dispatchEvent(new Event('click', { bubbles: true })));
         }
 
         window.addEventListener('scroll', () => {
